# kayak

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml
docs/: CONFIGURATION.md  database_schema.md  s3_structure.md
src/: dashboard.py
src/api/: __init__.py  orchestration.py
src/apps/: __init__.py
src/apps/data/: __init__.py  merger.py
src/apps/database/: __init__.py  client.py  etl.py  models.py  verify.py
src/apps/geocoding/: __init__.py  client.py
src/apps/scraping/: __init__.py  booking.py  run_top5.py
src/apps/storage/: __init__.py  s3.py
src/apps/visualization/: __init__.py  generate.py  maps.py
src/apps/weather/: __init__.py  client.py
src/core/: __init__.py  constants.py
src/pages/: 1_Weather_Scoring.py
src/settings/: __init__.py  base.py  weather_scoring.py
tests/: 02_integration.py  03_weather.py  04_city_name_coherence.py  conftest.py  test_geocoding_integration.py
